cert-manager/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app
  annotations:
    cert-manager.io/issuer: "letsencrypt-staging"
spec:
  rules:
  - host: test.myapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-app
            port:
              number: 9000
  ingressClassName: nginx
  tls:
  - hosts:
    - test.myapp.io
    secretName: my-app-tls
